# dataserious

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  testing.yaml  tests.yaml
dataserious/: __init__.py  base.py  fields.py  json.py  types.py  utils.py
tests/: conftest.py  test_base.py  test_config.py  test_fields.py  test_json.py
tests/assets/: config.yaml  search_tree.yaml
