[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataserious"
description = "dataclasses enhanced with type validation and serialization"
keywords = ["dataclasses", "type-annotation", "validation", "serialization"]
version = "0.1.0"
authors = [{name = "Nozadze Giorgi", email="giorginozadze23@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.6.1; python_version < '3.11'"
]

[project.optional-dependencies]
yaml = ["pyyaml"]
dev = ["pytest", "coverage", "ruff", "pre-commit"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I", # Sort Imports
    "D", # Docstrings
    "A", # flake8-builtins
    "T20", # flake8-print
    "C4", # flake8-comprehensions
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "BLE", #flake8-blind-except
]
fixable = ["I"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ "D", "B", "S", "C4" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
